--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Alana and Gabe get Married</title>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="/assets/main.css">
 	</head>
 	<body>
 		<nav>
