update email link

--- a/assets/index.html
+++ b/assets/index.html
@@ -19,7 +19,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="us@kin.house">email</a></li>
+        		<li><a href="mailto:us@kin.house">email</a></li>
         		<li><a href="https://github.com/kinhouse/sandbox">source</a></li>
 			</ul>
 		</footer>
