update front page

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,28 +1,24 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Alana and Gabe get Married</title>
-		<link rel="stylesheet" type="text/css" href="/assets/main.css">
+		<title>Alana + Gabe</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-    		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h3>Links</h3>
-				<p>We're tracking possible <a href="https://docs.google.com/spreadsheet/ccc?key=0AqLhbinMTkhOdG1pZ3JzZlpBS3JNcVFWUzdjaEtiLXc#gid=5">venues</a>.</p>
+    				<p>Alana + Gabe</p>
+				<p>June 28, 2015</p>
+				<p>Portland, Oregon</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:us@kin.house">email</a></li>
-        		<li><a href="https://github.com/kinhouse/sandbox">source</a></li>
+        		<li>. . .</li>
 			</ul>
 		</footer>
-</body>
+	</body>
 </html>
 
