--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Alana + Gabe</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/assets/main.css">
 	</head>
 	<body>
 		<nav>
