added github link

--- a/assets/template.html
+++ b/assets/template.html
@@ -20,6 +20,7 @@
         <footer>
             <ul>
                 <li><a href="mailto:us@kin.house">Contact</a></li>
+                <li><a href="https://github.com/kinhouse/kh-site">Source</a></li>
             </ul>
 		</footer>
 	</body>
