added header image, refactored static assets server

--- a/assets/home.html
+++ b/assets/home.html
@@ -1,3 +1,8 @@
-<h1>Alana &amp; Gabe</h1>
+    <style>
+      .headerImage {
+        max-width: 871px
+      }
+    </style>
+<img class="headerImage" src="header.png" width="100%">
 <p>June 28, 2015 in Portland, Oregon</p>
 <p>Formal invitations &amp; details to follow</p>
