add note on where header came from

--- a/assets/home.html
+++ b/assets/home.html
@@ -3,6 +3,8 @@
         max-width: 871px
       }
     </style>
+<!-- header source rendered from https://docs.google.com/drawings/d/1dgPG3eNrrFjES2mKVQGJqJxvN3iLlbCtIWH9OynvVyY/edit?usp=drive_web
+-->
 <img class="headerImage" src="header.png" width="100%">
 <p>June 28, 2015 in Portland, Oregon</p>
 <p>Formal invitations &amp; details to follow</p>
