--- a/assets/template.html
+++ b/assets/template.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Alana &amp; Gabe</title>
 		<link rel="stylesheet" type="text/css" href="/main.css">
+        <link rel="icon" type="image/png" href="/favicon.png" />
 	</head>
 	<body>
         <nav>
