improve front page layout

--- a/assets/home.html
+++ b/assets/home.html
@@ -1,10 +1,19 @@
     <style>
       .headerImage {
-        max-width: 871px
+        max-width: 871px;
+      }
+      .frontCenter {
+        align-self: center;
+          text-align: center;
+          min-width: 300px;
       }
     </style>
 <!-- header source rendered from https://docs.google.com/drawings/d/1dgPG3eNrrFjES2mKVQGJqJxvN3iLlbCtIWH9OynvVyY/edit?usp=drive_web
 -->
 <img class="headerImage" src="header.png" width="100%">
-<p>June 28, 2015 in Portland, Oregon</p>
-<p>Formal invitations &amp; details to follow</p>
+<div class="frontCenter">
+    <p style="padding:20px">&#x2665;</p>
+    <p>June 28, 2015 in Portland, Oregon</p>
+    <p>Formal invitations &amp; details to follow</p>
+</div>
+
