--- a/assets/template.html
+++ b/assets/template.html
@@ -4,6 +4,7 @@
 		<title>Alana &amp; Gabe</title>
 		<link rel="stylesheet" type="text/css" href="/main.css">
         <link rel="icon" type="image/png" href="/favicon.png" />
+		<meta name="robots" content="noindex">
 	</head>
 	<body>
         <nav>
