--- a/assets/home.html
+++ b/assets/home.html
@@ -1,19 +1,43 @@
-    <style>
-      .headerImage {
-        max-width: 871px;
-      }
-      .frontCenter {
-        align-self: center;
-          text-align: center;
-          min-width: 300px;
-      }
-    </style>
-<!-- header source rendered from https://docs.google.com/drawings/d/1dgPG3eNrrFjES2mKVQGJqJxvN3iLlbCtIWH9OynvVyY/edit?usp=drive_web
--->
-<img class="headerImage" src="header.png" width="100%">
-<div class="frontCenter">
-    <p style="padding:20px">&#x2665;</p>
-    <p>June 28, 2015 in Portland, Oregon</p>
-    <p>Formal invitations &amp; details to follow</p>
-</div>
-
+<style>
+            .frontCenter {
+                align-self: center;
+                text-align: center;
+                min-width: 300px;
+            }
+            .nameHeader {
+                line-height: 62%;
+                font-size: 6vw;
+                text-align: right;
+            }
+            .first-middle {
+                font-size: 4.5vw;
+                vertical-align: top;
+                font-weight: 100
+            }
+            .last-heavy {
+                font-weight: 400;
+            }
+            .last-light {
+                font-weight: 300;
+            }
+            .gabe {
+                position: relative;
+                left: 0.7vw;
+            }
+        </style>
+        <div class="nameHeader">
+            <div class="alana">
+                <span class="first-middle">Alana Rose</span>
+                <span class="last-heavy">Kin</span><span class="last-light">arsky</span>
+            </div>
+            <div class="gabe">
+                <span class="first-middle">Gabriel Isaac</span>
+                <span class="last-light">Rosen</span><span class="last-heavy">house</span>
+            </div>
+        </div>
+        <div class="frontCenter">
+            <p style="padding:20px; font-size: 5vw">&#x2665;</p>
+            <p>June 28, 2015</p>
+            <p>Portland, Oregon</p>
+            <p>More details coming soon</p>
+        </div>
