--- a/assets/template.html
+++ b/assets/template.html
@@ -10,10 +10,10 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/event">Event</a></li>
                 <!--
                 <li><a href="/rsvp">RSVP</a></li>
-                <li><a href="/event">Event details</a></li>
-                <li><a href="/accommodations">Accommodations</a></li> -->
+                -->
             </ul>
 		</nav>
         <div class="page">
