better text on events page

--- a/assets/event.html
+++ b/assets/event.html
@@ -5,15 +5,5 @@
 </div>
 <p></p>
 <a href="https://goo.gl/maps/74OXB"><img src="map.png"></a>
+<p>Schedule and other details coming soon</p>
 
-<!--
-<h1>Schedule</h1>
-<h2>June 28, 2015</h2>
-<div class="schedule">
-    <ul>
-        <li>4:30pm - Photos</li>
-        <li>5:30pm - Ceremony</li>
-        <li>6:30pm - Food</li>
-    </ul>
-</div>
--->
