fix spelling of Coopers

--- a/assets/event.html
+++ b/assets/event.html
@@ -1,5 +1,5 @@
 <div class="address">
-    Cooper's Hall<br>
+    Coopers Hall<br>
     <a href="https://goo.gl/maps/74OXB">404 SE 6th Ave<br>
     Portland, OR 97214<br></a>
 </div>
