add alt text to map image

--- a/assets/event.html
+++ b/assets/event.html
@@ -4,6 +4,6 @@
     Portland, OR 97214<br></a>
 </div>
 <p></p>
-<a href="https://goo.gl/maps/74OXB"><img src="map.png"></a>
+<a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map"></a>
 <p>Schedule and other details coming soon</p>
 
