Initial work on RSVP feature
- Work in Progress
- Minimal HTML form
- Dummy POST endpoint
- Minimal integration test

[#87881782]

--- a/assets/rsvp.html
+++ b/assets/rsvp.html
@@ -1,1 +1,7 @@
-<p>Coming soon</p>
+<form id="rsvp_form" method="post">
+    <p><label>Name: <input name="FullName"></label></p>
+    <p><label>Email: <input name="Email" type="email"></label></p>
+    <p><label><input type="radio" name="AcceptInvite" value="true">Yes, looking forward to it!</label></p>
+    <p><label><input type="radio" name="AcceptInvite" value="false">No, I will not be attending</label></p>
+    <p><input type="submit"></p>
+</form>
