Refactor page data struct
- Removes ID field
- No longer includes circular reference
- Should more easily support pages without nav-bar links (e.g. rsvp response pages)

[#87881782]

--- a/assets/template.html
+++ b/assets/template.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 {{with .NavItems}}
-                {{range .}}<li{{if eq .ID $.ID}} class="nav-current"{{end}}><a href="/{{.Route}}">{{.Title}}</a></li>
+                {{range .}}<li{{if eq .Route $.Route}} class="nav-current"{{end}}><a href="/{{.Route}}">{{.Title}}</a></li>
                 {{end}}
                 {{end}}
             </ul>
