RSVP working, but without party size count
- change valiance of decline bool form field
- refactor PageFactory to support dynamic pages

[#87881782]

--- a/assets/rsvp.html
+++ b/assets/rsvp.html
@@ -1,7 +1,7 @@
 <form id="rsvp_form" method="post">
     <p><label>Name: <input name="FullName"></label></p>
     <p><label>Email: <input name="Email" type="email"></label></p>
-    <p><label><input type="radio" name="AcceptInvite" value="true">Yes, looking forward to it!</label></p>
-    <p><label><input type="radio" name="AcceptInvite" value="false">No, I will not be attending</label></p>
+    <p><label><input type="radio" name="DeclineInvite" value="false">Yes, looking forward to it!</label></p>
+    <p><label><input type="radio" name="DeclineInvite" value="true">No, I will not be attending</label></p>
     <p><input type="submit"></p>
 </form>
