--- a/assets/rsvp.html
+++ b/assets/rsvp.html
@@ -1,7 +1,34 @@
 <form id="rsvp_form" method="post">
-    <p><label>Name: <input name="FullName"></label></p>
-    <p><label>Email: <input name="Email" type="email"></label></p>
-    <p><label><input type="radio" name="DeclineInvite" value="false">Yes, looking forward to it!</label></p>
-    <p><label><input type="radio" name="DeclineInvite" value="true">No, I will not be attending</label></p>
+<script>
+function updateCountVisibility(show) {
+    var ui = document.getElementById('count_ui')
+    var count_input = document.getElementById('count')
+    if (show) {
+        ui.removeAttribute("hidden");
+        count_input.removeAttribute("disabled");
+    }
+    else {
+        ui.setAttribute("hidden", "yes");
+        count_input.setAttribute("disabled", "yes");
+    }
+}
+window.onload = function(){
+ document.getElementById("rsvp_form").reset();
+}
+
+</script>
+    <p><label>Name: <input name="FullName" required></label></p>
+    <p><label>Email: <input name="Email" type="email" required ></label></p>
+    <p><label><input required type="radio" name="DeclineInvite" value="false" onchange="updateCountVisibility(this.checked)">Yes, looking forward to it!</label></p>
+    <p><label><input type="radio" name="DeclineInvite" value="true" onchange="updateCountVisibility(!this.checked)">No, I will not be attending</label></p>
+    <p><label hidden id="count_ui">Great! How many of you? <select id="count" name="Count" disabled >
+        <option value="1">Just me (1)</option>
+        <option value="2">Two of us (2)</option>
+        <option value="3">Group of 3</option>
+        <option value="4">Group of 4</option>
+        <option value="5">Group of 5</option>
+        <option value="6">Group of 6</option>
+      </select>
+    </label></p>
     <p><input type="submit"></p>
 </form>
