Add schedule details

--- a/assets/event.html
+++ b/assets/event.html
@@ -1,3 +1,5 @@
+
+<h1>Location</h1>
 <div class="address">
     Coopers Hall<br>
     <a href="https://goo.gl/maps/74OXB">404 SE 6th Ave<br>
@@ -5,5 +7,11 @@
 </div>
 <p></p>
 <a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map"></a>
-<p>Schedule and other details coming soon</p>
+
+<h1>Schedule</h1>
+<p>Ceremony will begin promptly at 6pm</p>
+
+<p>Please arrive 20-30 minutes early to allow time for parking and seating</p>
+
+<p>Hors d'oeuvres and dancing will follow</p>
 
