fixes to travel page

--- a/assets/travel.html
+++ b/assets/travel.html
@@ -1,5 +1,6 @@
 
 <h1>Not a Portlander?</h1>
+<p><em>Book your room early!  Portland gets lots of visitors in the summer.</em></p>
 <h2>Hotels</h2>
 <p>We haven't booked a group rate anywhere -- prices we were quoted weren't competitive with what we could find online.</p>
 
@@ -14,7 +15,7 @@ Most of the nice hotels are in downtown Portland, on the west side.  You might l
 <h2>Alternatives</h2>
 <p>You can rent a private room or a whole house on <a href="https://www.airbnb.com/">AirBnB</a> or <a href="http://www.vrbo.com/">VRBO</a>.  We'll be staying a few nights in a small AirBnB in Northwest Portland.</p>
 
-<p>Want to share housing with other guests from out-of-town?  Send us a note, and we'll put you in touch: us@kin.house</p>
+<p>Want to share housing with other guests from out-of-town?  Send us a note, and we'll put you in touch: <a href="mailto:us@kin.house">us@kin.house</a></p>
 
 <h2>Getting around</h2>
 <p>Public transit in Portland is called <a href="http://trimet.org/">TriMet</a>.  It serves the airport (PDX) and has stops near the venue and all the hotels listed above.
