Improve layout on mobile
- add meta tag for scalable viewport
- map width limited to 100%

--- a/assets/event.html
+++ b/assets/event.html
@@ -6,7 +6,7 @@
     Portland, OR 97214<br></a>
 </div>
 <p></p>
-<a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map"></a>
+<a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map" style="max-width: 100%"></a>
 
 <h1>Schedule</h1>
 <p>Ceremony will begin promptly at 6pm</p>
