--- a/assets/template.html
+++ b/assets/template.html
@@ -5,6 +5,7 @@
 		<title>Alana &amp; Gabe{{if ne .Title "Home"}}: {{.Title}}{{end}}</title>
 		<link rel="stylesheet" type="text/css" href="/main.css">
         <link rel="icon" type="image/png" href="/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
