--- a/assets/rsvp.html
+++ b/assets/rsvp.html
@@ -15,13 +15,13 @@ function updateCountVisibility(show) {
 window.onload = function(){
  document.getElementById("rsvp_form").reset();
 }
-
 </script>
+<h1>RSVP</h1>
+<h2>Please let us know if you will be joining us!</h2>
     <p><label>Name: <input name="FullName" required></label></p>
     <p><label>Email: <input name="Email" type="email" required ></label></p>
     <p><label><input required type="radio" name="DeclineInvite" value="false" onchange="updateCountVisibility(this.checked)">Yes, looking forward to it!</label></p>
-    <p><label><input required type="radio" name="DeclineInvite" value="true" onchange="updateCountVisibility(!this.checked)">No, I will not be attending</label></p>
-    <p><label hidden id="count_ui">Great! How many of you? <select id="count" name="Count" disabled >
+    <p class="indented"><label hidden id="count_ui"><em>Great!</em> How many of you? <select id="count" name="Count" disabled >
         <option value="1">Just me (1)</option>
         <option value="2">Two of us (2)</option>
         <option value="3">Group of 3</option>
@@ -30,5 +30,6 @@ window.onload = function(){
         <option value="6">Group of 6</option>
       </select>
     </label></p>
+    <p><label><input required type="radio" name="DeclineInvite" value="true" onchange="updateCountVisibility(!this.checked)">No, I will not be attending</label></p>
     <p><input type="submit" value="Submit"></p>
 </form>
