side-by-side display on travel and event pages

--- a/assets/event.html
+++ b/assets/event.html
@@ -1,17 +1,24 @@
+<div class="wrapping">
 
-<h1>Location</h1>
-<div class="address">
-    Coopers Hall<br>
-    <a href="https://goo.gl/maps/74OXB">404 SE 6th Ave<br>
-    Portland, OR 97214<br></a>
+    <div class="wrapped_box_2">
+        <h1>Location</h1>
+        <div class="address">
+            Coopers Hall<br>
+            <a href="https://goo.gl/maps/74OXB">404 SE 6th Ave<br>
+            Portland, OR 97214<br></a>
+        </div>
+        <p></p>
+        <a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map" style="max-width: 100%"></a>
+    </div>
+
+    <div class="wrapped_box_2">
+
+        <h1>Schedule</h1>
+        <p>Ceremony will begin promptly at 6pm</p>
+
+        <p>Please arrive 20-30 minutes early to allow time for parking and seating</p>
+
+        <p>Hors d'oeuvres and dancing will follow</p>
+
+    </div>
 </div>
-<p></p>
-<a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map" style="max-width: 100%"></a>
-
-<h1>Schedule</h1>
-<p>Ceremony will begin promptly at 6pm</p>
-
-<p>Please arrive 20-30 minutes early to allow time for parking and seating</p>
-
-<p>Hors d'oeuvres and dancing will follow</p>
-
