--- a/assets/event.html
+++ b/assets/event.html
@@ -18,7 +18,7 @@
 
         <p>Please arrive 20-30 minutes early to allow time for parking and seating</p>
 
-        <p>Hors d'oeuvres and dancing will follow</p>
+        <p>Food and dancing will follow</p>
 
     </div>
 </div>
