--- a/assets/home.html
+++ b/assets/home.html
@@ -12,5 +12,5 @@
             <p style="padding:20px; font-size: 5vw">&#x2665;</p>
             <p>June 28, 2015</p>
             <p>Portland, Oregon</p>
-            <img src="rose.svg" width="60%" onerror="this.src='rose.png'">
+            <img class="roseDrawing" src="rose.svg" onerror="this.src='rose.png'">
         </div>
