hotel room block info

--- a/assets/travel.html
+++ b/assets/travel.html
@@ -7,17 +7,18 @@
 
     <div class="wrapped_box_3">
         <h2>Hotels</h2>
-        <p>We haven't booked a group rate anywhere -- prices we were quoted weren't competitive with what we could find online.</p>
-
-        Most of the nice hotels are in downtown Portland, on the west side.  You might look at
+        We have group rates at two hotels:
         <ul>
-            <li><a href="http://www.bensonhotel.com">Benson Hotel</a></li>
-            <li><a href="http://www.markspencer.com">Mark Spencer</a></li>
-            <li><a href="http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html">Hilton</li>
+            <li><a href="http://www.bensonhotel.com">Benson Hotel</a> until May 27</li>
+            <li><a href="http://www.markspencer.com">Mark Spencer</a> until May 12</li>
         </ul>
-        <p><a href="http://goo.gl/iiTF2G">Look around</a> for others.
+        <p>To get the rate, call before the cutoff date and mention that you're "with the Kinarsky / Rosenhouse wedding".</p>
+
+        <p>You might also look at the
+        <a href="http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html">Hilton</li></a>.
         The <a href="http://www.jupiterhotel.com/">Jupiter</a> is close to the venue, with a "young, hip vibe"
         -- there's a bar and music venue downstairs.</p>
+        <a href="http://goo.gl/iiTF2G">Look around</a> for others.
     </div>
 
     <div class="wrapped_box_3">
