--- a/assets/gifts.html
+++ b/assets/gifts.html
@@ -2,5 +2,5 @@
 
 <p><em>Flights and hotels are expensive, and the best gift is your presence!</em></p>
 
-<p>However, if you really want to give us something extra, we've set up a small <a href="http://amzn.com/w/3PAXCGYNZWSZD">registry with Amazon.com</a></p>
+<p>However, if you really want to give us something extra, we will be setting up a small registry.  Check back at this page in a few weeks for a link.</p>
 
