--- a/assets/home.html
+++ b/assets/home.html
@@ -1,16 +1,35 @@
-        <div class="nameHeader">
-            <div class="alana">
-                <span class="first-middle">Alana Rose</span>
-                <span class="last-heavy">Kin</span><span class="last-light">arsky</span>
-            </div>
-            <div class="gabe">
-                <span class="first-middle">Gabriel Isaac</span>
-                <span class="last-light">Rosen</span><span class="last-heavy">house</span>
+<div class="top-row">
+    <div class="pure-g">
+        <div class="pure-u-3-4">
+            <div class="name-header">
+                <div> <span class="alana name-heavy">Kin</span><span class="alana name-light">arsky</span>
+
+                </div>
+                <div> <span class="gabe name-light">Rosen</span><span class="gabe name-heavy">house</span>
+
+                </div>
             </div>
         </div>
-        <div class="frontCenter">
-            <p style="padding:20px; font-size: 5vw">&#x2665;</p>
-            <p>June 28, 2015</p>
-            <p>Portland, Oregon</p>
-            <img class="roseDrawing" src="rose.svg" onerror="this.src='rose.png'">
+        <div class="pure-u-1-4 pure-img">
+            <img class="rose" src="https://kin.house/rose.svg" />
         </div>
+    </div>
+</div>
+<div class="lower-grid">
+    <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-2">
+            <div class="padded rightjust">
+                <p>We're excited to get married
+                    <br />and hope you can join us!</p>
+                <p>June 28, 2015
+                    <br />Portland, Oregon</p>
+            </div>
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2">
+            <div class="left-bordered padded leftjust">
+                <p>Look around this website for information. We’ll be adding info over the coming weeks; check back occasionally.</p>
+                <p>In the meantime, write us if you have any questions: <a href="mailto:us@kin.house">us@kin.house</a></p>
+            </div>
+        </div>
+    </div>
+</div>
