--- a/assets/template.html
+++ b/assets/template.html
@@ -3,6 +3,8 @@
 	<head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>Alana &amp; Gabe{{if ne .Title "Home"}}: {{.Title}}{{end}}</title>
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
 		<link rel="stylesheet" type="text/css" href="/main.css">
         <link rel="icon" type="image/png" href="/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
