--- a/assets/event.html
+++ b/assets/event.html
@@ -14,11 +14,13 @@
     <div class="wrapped_box_2">
 
         <h1>Schedule</h1>
-        <p>Ceremony will begin promptly at 6pm</p>
+        <p>Ceremony will begin promptly at 6pm.</p>
 
-        <p>Please arrive 20-30 minutes early to allow time for parking and seating</p>
+        <p>Please arrive 20-30 minutes early to allow time for parking and seating.</p>
 
-        <p>Food and dancing will follow</p>
+        <p>Food and dancing will follow.</p>
+
+        <p><em>Spontaneous toasts are welcome!</em></p>
 
     </div>
 </div>
