--- a/assets/us.html
+++ b/assets/us.html
@@ -24,6 +24,7 @@
         <img width="100%" src="photo-matchbox.jpg" />
         <img width="100%" src="photo-nkw.jpg" />
         <img width="100%" src="photo-coffee.jpg" />
+        <small>Thanks to <a href="http://adriennevitt.com/">Adrienne Vitt</a> for the b&amp;w photos!</small>
     </div>
 
     <div class="wrapped_box_3">
