--- a/assets/event.html
+++ b/assets/event.html
@@ -1,26 +1,38 @@
-<div class="wrapping">
+<div class="pure-g">
 
-    <div class="wrapped_box_2">
-        <h1>Location</h1>
-        <div class="address">
-            Coopers Hall<br>
-            <a href="https://goo.gl/maps/74OXB">404 SE 6th Ave<br>
-            Portland, OR 97214<br></a>
+    <div class="pure-u-1 pure-u-md-1-3">
+        <div class="lightly-padded">
+            <h1>Location</h1>
+            <div class="address">
+                Coopers Hall<br>
+                <a href="https://goo.gl/maps/74OXB">404 SE 6th Ave<br>
+                Portland, OR 97214<br></a>
+            </div>
+            <p></p>
+            <a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map" style="max-width: 100%"></a>
         </div>
-        <p></p>
-        <a href="https://goo.gl/maps/74OXB"><img src="map.png" alt="map" style="max-width: 100%"></a>
     </div>
 
-    <div class="wrapped_box_2">
+    <div class="pure-u-1 pure-u-md-1-3">
+        <div class="lightly-padded">
+            <h1>Schedule</h1>
+            <p>Ceremony will begin promptly at 6pm on Sunday, June 28.</p>
 
-        <h1>Schedule</h1>
-        <p>Ceremony will begin promptly at 6pm.</p>
+            <p>Please arrive 20-30 minutes early to allow time for parking and seating.</p>
 
-        <p>Please arrive 20-30 minutes early to allow time for parking and seating.</p>
+            <p>Food and dancing will follow.</p>
 
-        <p>Food and dancing will follow.</p>
+            <p><em>Spontaneous toasts are welcome!</em></p>
+        </div>
+    </div>
 
-        <p><em>Spontaneous toasts are welcome!</em></p>
-
+    <div class="pure-u-1 pure-u-md-1-3">
+        <div class="lightly-padded">
+            <h1>Extras...</h1>
+            <h2>For family</h2>
+            <p>Gabe's parents, Pam &amp; Dan, are hosting an informal gathering at their home on Saturday, June 27 for our families.  Separate invitations will go out via email.</p>
+            <h2>For friends</h2>
+            <p>In lieu of bachlor &amp; bachelorette parties, we're inviting our friends to grab beers on the evening of Friday, June 26.  Details to follow.</p>
+        </div>
     </div>
 </div>
