--- a/assets/event.html
+++ b/assets/event.html
@@ -32,7 +32,7 @@
             <h2>For family</h2>
             <p>Gabe's parents, Pam &amp; Dan, are hosting an informal gathering at their home on Saturday, June 27 for our families.  Separate invitations will go out via email.</p>
             <h2>For friends</h2>
-            <p>In lieu of bachlor &amp; bachelorette parties, we're inviting our friends to grab beers on the evening of Friday, June 26.  Details to follow.</p>
+            <p>In lieu of bachelor &amp; bachelorette parties, we're inviting our friends to grab beers on the evening of Friday, June 26.  Details to follow.</p>
         </div>
     </div>
 </div>
