--- a/assets/us.html
+++ b/assets/us.html
@@ -7,7 +7,7 @@
         <h2>How it started</h2>
         <p>Our lives first intersected in a hotel lobby near Chicago’s O’Hare Airport in April 2003.
         Alana, a high-school junior, was applying for the <a href="http://byfi.org/">BYFI</a> summer program in Israel.
-        Gabe, a college freshman and alumni of the summer program, was helping out for the day -- greeting applicants while they waited for their interviews.
+        Gabe, a college freshman and alumnus of the summer program, was helping out for the day -- greeting applicants while they waited for their interviews.
         We parted ways with a mutual crush.</p>
 
         <p>Alana attended the program and started college in Chicago a year later.
