use jpg postcard

--- a/assets/explore.html
+++ b/assets/explore.html
@@ -29,7 +29,7 @@
 
     <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
         <div class="lightly-padded">
-            <img src="postcard.png" width="100%">
+            <img src="postcard.jpg" width="100%">
         </div>
     </div>
 
