--- a/assets/explore.html
+++ b/assets/explore.html
@@ -38,7 +38,7 @@
         <div class="lightly-padded">
             <h3>In the city</h3>
             <ul>
-                <li>Explore the city via the <a href="https://4ttrail.wordpress.com/take-a-hike/">4T - Trail, Tram, Trolley, and Train!</a>  Includes beautiful views of the city on the <a href="http://www.gobytram.com/">Areial Tram</a> </li>
+                <li>Explore the city via the <a href="https://4ttrail.wordpress.com/take-a-hike/">4T - Trail, Tram, Trolley, and Train!</a>  Includes beautiful views of the city on the <a href="http://www.gobytram.com/">Aerial Tram</a> </li>
                 <li>Roses of all varieties at the <a href="http://www.travelportland.com/article/portland-rose-garden/">International Rose Test Garden</a></li>
                 <li>Enjoy the <a href="http://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&ShowResults=yes&PropertyID=265">world's smallest park</a></li>
                 <li>And <a href="http://www.forestparkconservancy.org/forest-park/">Forest Park</a>, one of the world's largest urban forest reserves</li>
@@ -51,7 +51,7 @@
             <h3>Beyond the city</h3>
             <ul>
                 <li><a href="http://www.travelportland.com/article/multnomah-falls/">Multnomah Falls</a> is a must-see, though it will be crowded on the weekend</li>
-                <li>If it's hot, try the <a href="http://www.nwhiker.com/CGNSAHike53.html">Oneota Gorge hike</a> for something different</li>
+                <li>If it's hot, try the <a href="http://www.nwhiker.com/CGNSAHike53.html">Oneonta Gorge hike</a> for something different</li>
                 <li>Or take a day trip to <a href="http://sauvieisland.org/">Sauvie Island</a>.  In late June there should be great strawberries, lots of birds, warm beaches and a cool oak savannah.</li>
             </ul>
         </div>
