--- a/assets/gifts.html
+++ b/assets/gifts.html
@@ -1,6 +1,9 @@
 <h2>We'd rather you don't bring us gifts.</h2>
 
 <p><em>Flights and hotels are expensive, and the best gift is your presence!</em></p>
-
-<p>However, if you really want to give us something extra, we will be setting up a small registry.  Check back in a few weeks for a link.</p>
+<div>
+    <img width="100%" style="max-width:700px" src="grownups.png">
+    <p style="font-size:x-small">Credit: <a href="https://xkcd.com/150/">XKCD</a></p>
+</div>
+<p>However, if you'd like to give us something extra, we've set up a <a href="http://www.amazon.com/registry/wedding/2B8GARL7ZV2UK">registry on Amazon.com here</a>.</p>
 
