--- a/assets/explore.html
+++ b/assets/explore.html
@@ -1,5 +1,5 @@
 
-<h1>Fun in Portland</h1>
+<h1>Fun around Portland</h1>
 <p><em>Planning a longer trip?
     We asked our family &amp; friends for their Portland-area favorites&hellip;</em></p>
 
@@ -23,6 +23,8 @@
             <ul>
                 <li>The <a href="http://pdxwnbr.org/">World Naked Bike Ride</a> is the day before the wedding (what a lucky coincidence!) </li>
                 <li>The <a href="http://www.waterfrontbluesfest.com/">Waterfront Blues Festival</a> starts a few days later</li>
+                <li>Check out the <a href="http://www.portlandsaturdaymarket.com/visit-the-market/">Saturday Market</a></li>
+                <li>The Portland Timbers have a home game the <a href="http://www.timbers.com/schedule?month=7&year=2015&competition_type=all&broadcast_type=all&op=Search&form_id=mls_schedule_form">following weekend</a></li>
             </ul>
         </div>
     </div>
@@ -42,6 +44,7 @@
                 <li>Roses of all varieties at the <a href="http://www.travelportland.com/article/portland-rose-garden/">International Rose Test Garden</a></li>
                 <li>Enjoy the <a href="http://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&ShowResults=yes&PropertyID=265">world's smallest park</a></li>
                 <li>And <a href="http://www.forestparkconservancy.org/forest-park/">Forest Park</a>, one of the world's largest urban forest reserves</li>
+                <li>For shopping, dining, galleries and the like, check out <a href="http://www.travelportland.com/article/northwest-portland-shopping/">23rd St</a> and the <a href="http://www.travelportland.com/collection/pearl-district/">Pearl District</a> in NW Portland.</li>
             </ul>
         </div>
     </div>
@@ -50,6 +53,7 @@
         <div class="lightly-padded">
             <h3>Beyond the city</h3>
             <ul>
+                <li>There are some beautiful <a href="http://www.oregonhikers.org/field_guide/Columbia_River_Gorge_Hikes">hikes in the Golumbia River Gorge</a></li>
                 <li><a href="http://www.travelportland.com/article/multnomah-falls/">Multnomah Falls</a> is a must-see, though it will be crowded on the weekend</li>
                 <li>If it's hot, try the <a href="http://www.nwhiker.com/CGNSAHike53.html">Oneonta Gorge hike</a> for something different</li>
                 <li>Or take a day trip to <a href="http://sauvieisland.org/">Sauvie Island</a>.  In late June there should be great strawberries, lots of birds, warm beaches and a cool oak savannah.</li>
