Fixups to properly validate as HTML5

--- a/assets/explore.html
+++ b/assets/explore.html
@@ -24,14 +24,14 @@
                 <li>The <a href="http://pdxwnbr.org/">World Naked Bike Ride</a> is the day before the wedding (what a lucky coincidence!) </li>
                 <li>The <a href="http://www.waterfrontbluesfest.com/">Waterfront Blues Festival</a> starts a few days later</li>
                 <li>Check out the <a href="http://www.portlandsaturdaymarket.com/visit-the-market/">Saturday Market</a></li>
-                <li>The Portland Timbers have a home game the <a href="http://www.timbers.com/schedule?month=7&year=2015&competition_type=all&broadcast_type=all&op=Search&form_id=mls_schedule_form">following weekend</a></li>
+                <li>The Portland Timbers have a home game the <a href="http://goo.gl/gBxJsT">following weekend</a></li>
             </ul>
         </div>
     </div>
 
     <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
         <div class="lightly-padded">
-            <img src="postcard.jpg" width="100%">
+            <img src="postcard.jpg" class="full-width" alt="Portland postcard">
         </div>
     </div>
 
@@ -42,7 +42,7 @@
             <ul>
                 <li>Explore the city via the <a href="https://4ttrail.wordpress.com/take-a-hike/">4T - Trail, Tram, Trolley, and Train!</a>  Includes beautiful views of the city on the <a href="http://www.gobytram.com/">Aerial Tram</a> </li>
                 <li>Roses of all varieties at the <a href="http://www.travelportland.com/article/portland-rose-garden/">International Rose Test Garden</a></li>
-                <li>Enjoy the <a href="http://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&ShowResults=yes&PropertyID=265">world's smallest park</a></li>
+                <li>Enjoy the <a href="http://goo.gl/6d80B6">world's smallest park</a></li>
                 <li>And <a href="http://www.forestparkconservancy.org/forest-park/">Forest Park</a>, one of the world's largest urban forest reserves</li>
                 <li>For shopping, dining, galleries and the like, check out <a href="http://www.travelportland.com/article/northwest-portland-shopping/">23rd St</a> and the <a href="http://www.travelportland.com/collection/pearl-district/">Pearl District</a> in NW Portland.</li>
             </ul>
