--- a/assets/gifts.html
+++ b/assets/gifts.html
@@ -2,7 +2,7 @@
 
 <p><em>Flights and hotels are expensive, and the best gift is your presence!</em></p>
 <div>
-    <img width="100%" style="max-width:700px" src="grownups.png">
+    <img style="width:100%; max-width:700px" src="grownups.png" alt="xkcd: grownups">
     <p style="font-size:x-small">Credit: <a href="https://xkcd.com/150/">XKCD</a></p>
 </div>
 <p>However, if you'd like to give us something extra, we've set up a <a href="http://www.amazon.com/registry/wedding/2B8GARL7ZV2UK">registry on Amazon.com here</a>.</p>
