--- a/assets/home.html
+++ b/assets/home.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="pure-u-1-4 pure-img">
-            <img class="rose" src="https://kin.house/rose.svg" />
+            <img class="rose" src="https://kin.house/rose.svg" alt="rose" />
         </div>
     </div>
 </div>
