--- a/assets/travel.html
+++ b/assets/travel.html
@@ -15,7 +15,7 @@
         <p>To get the rate, call before the cutoff date and mention that you're "with the Kinarsky / Rosenhouse wedding".</p>
 
         <p>You might also look at the
-        <a href="http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html">Hilton</li></a>.
+        <a href="http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html">Hilton</a>.
         The <a href="http://www.jupiterhotel.com/">Jupiter</a> is close to the venue, with a "young, hip vibe"
         -- there's a bar and music venue downstairs.</p>
         <a href="http://goo.gl/iiTF2G">Look around</a> for others.
@@ -34,6 +34,6 @@
 
         Get <a href="http://goo.gl/uHpPqO">transit directions from Google Maps</a></p>
 
-        <p>If you're planning a longer stay, or want to see the famous outdoors of the Pacific Northwest, plan to rent a car at the airport or <a href="https://www.google.com/webhp?ion=1&espv=2&ie=UTF-8#q=portland%20downtown%20car%20rental">downtown</a></p>
+        <p>If you're planning a longer stay, or want to see the famous outdoors of the Pacific Northwest, plan to rent a car at the airport or <a href="http://goo.gl/BXnZ2V">downtown</a></p>
     </div>
 </div>
