--- a/assets/us.html
+++ b/assets/us.html
@@ -21,9 +21,9 @@
     </div>
 
     <div class="wrapped_box_3">
-        <img width="100%" src="photo-matchbox.jpg" />
-        <img width="100%" src="photo-nkw.jpg" />
-        <img width="100%" src="photo-coffee.jpg" />
+        <img class="full-width" src="photo-matchbox.jpg" alt="photo 1" />
+        <img class="full-width" src="photo-nkw.jpg" alt="photo 2" />
+        <img class="full-width" src="photo-coffee.jpg" alt="photo 3" />
         <small>Thanks to <a href="http://adriennevitt.com/">Adrienne Vitt</a> for the b&amp;w photos!</small>
     </div>
 
