Earlier start time

--- a/assets/event.html
+++ b/assets/event.html
@@ -16,7 +16,8 @@
     <div class="pure-u-1 pure-u-md-1-3">
         <div class="lightly-padded">
             <h1>Schedule</h1>
-            <p>Ceremony will begin promptly at 6pm on Sunday, June 28.</p>
+            <p>Ceremony will begin at <b>5pm</b> on Sunday, June 28.</p>
+            <p>Note this is <b>one hour earlier</b> than we originally announced!</p>
 
             <p>Please arrive 20-30 minutes early to allow time for parking and seating.</p>
 
