--- a/assets/event.html
+++ b/assets/event.html
@@ -31,9 +31,11 @@
         <div class="lightly-padded">
             <h1>Extras...</h1>
             <h2>For family</h2>
-            <p>Gabe's parents, Pam &amp; Dan, are hosting an informal gathering at their home on Saturday, June 27 for our families.  Separate invitations will go out via email.</p>
+            <p>Gabe's parents, Pam &amp; Dan, are hosting an informal gathering at their home on Saturday, June 27 for our families.
+              Separate invitations have gone out via email.</p>
             <h2>For friends</h2>
-            <p>In lieu of bachelor &amp; bachelorette parties, we're inviting our friends to grab beers on the evening of Friday, June 26.  Details to follow.</p>
+            <p>In lieu of bachelor &amp; bachelorette parties, we're inviting our friends to join us for beers on the evening of Friday, June 26.
+              Details to follow.</p>
         </div>
     </div>
 </div>
