Adds start time to home page
[#95597496]

--- a/assets/home.html
+++ b/assets/home.html
@@ -21,7 +21,7 @@
             <div class="padded rightjust">
                 <p>We're excited to get married
                     <br />and hope you can join us!</p>
-                <p>June 28, 2015
+                <p><b>5pm</b> on June 28, 2015
                     <br />Portland, Oregon</p>
             </div>
         </div>
