--- a/assets/event.html
+++ b/assets/event.html
@@ -1,6 +1,6 @@
 <div class="pure-g">
 
-    <div class="pure-u-1 pure-u-md-1-3">
+    <div class="pure-u-1 pure-u-md-1-4">
         <div class="lightly-padded">
             <h1>Location</h1>
             <div class="address">
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div class="pure-u-1 pure-u-md-1-3">
+    <div class="pure-u-1 pure-u-md-1-4">
         <div class="lightly-padded">
             <h1>Schedule</h1>
             <p>Ceremony will begin at <b>5pm</b> on Sunday, June 28.</p>
@@ -27,7 +27,21 @@
         </div>
     </div>
 
-    <div class="pure-u-1 pure-u-md-1-3">
+    <div class="pure-u-1 pure-u-md-1-4">
+        <div class="lightly-padded">
+            <h1>Attire</h1>
+            <p>We've had a few questions about this.</p>
+            <p>It's summertime in Portland.  Cocktail attire is plenty.  </p>
+
+            <p>
+            <img src="too-much.jpg" alt="not this dressy" style="max-width: 100%">
+            <br>
+            <em>Less dressy than this</em>
+            </p>
+        </div>
+    </div>
+
+    <div class="pure-u-1 pure-u-md-1-4">
         <div class="lightly-padded">
             <h1>Extras...</h1>
             <h2>For family</h2>
