fix formatting on traditions page

--- a/assets/traditions.html
+++ b/assets/traditions.html
@@ -6,8 +6,8 @@
     <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
         <div class="lightly-padded">
             <h3>Why Sunday?</h3>
-            Under Jewish law, weddings are forbidden during the Sabbath.  Jews observe <em>shabbat</em> from sunset Friday
-            to sunset Saturday.  Since the summer days are long, Sunday is the only weekend option.
+            <p>Under Jewish law, weddings are forbidden during the Sabbath.  Jews observe <em>shabbat</em> from sunset Friday
+            to sunset Saturday.  Since the summer days are long, Sunday is the only weekend option.</p>
         </div>
 
         <div class="lightly-padded">
