More formatting fixes

--- a/assets/traditions.html
+++ b/assets/traditions.html
@@ -54,7 +54,8 @@
         <div class="lightly-padded">
             <h3>Breaking the Glass</h3>
 
-            At the end of the ceremony, Gabe will step on a glass wrapped in cloth.  This is a nonreligous but very old custom, with many interpretations:
+            <p>At the end of the ceremony, Gabe will step on a glass wrapped in cloth.
+            This is a nonreligous but very old custom, with many interpretations:</p>
             <ul>
                 <li>A reminder of the destruction of the first Temple in Jerusalem</li>
                 <li>A statement that the world is in excile, broken, and requiring our care.</li>
