enable half-page grid cells on event page

--- a/assets/event.html
+++ b/assets/event.html
@@ -1,6 +1,6 @@
 <div class="pure-g">
 
-    <div class="pure-u-1 pure-u-md-1-4">
+    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
         <div class="lightly-padded">
             <h1>Location</h1>
             <div class="address">
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div class="pure-u-1 pure-u-md-1-4">
+    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
         <div class="lightly-padded">
             <h1>Schedule</h1>
             <p>Ceremony will begin at <b>5pm</b> on Sunday, June 28.</p>
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="pure-u-1 pure-u-md-1-4">
+    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
         <div class="lightly-padded">
             <h1>Attire</h1>
             <p>We've had a few questions about this.</p>
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="pure-u-1 pure-u-md-1-4">
+    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
         <div class="lightly-padded">
             <h1>Extras...</h1>
             <h2>For family</h2>
