Fix typos on traditions page
- Adds rose to bottom

--- a/assets/traditions.html
+++ b/assets/traditions.html
@@ -41,7 +41,7 @@
             <p>Over the last half-century, Jews have modified and re-interpreted that text to fit our evolving standards of ethics,
             adding language about equality, love and mutual responsibility.  But the roots of the <em>ketubah</em> remain in ancient property law.</p>
 
-            <p>We have chosen to sign something different.  Called a <em>B’rit Ahuvim</em> or "Lovers’ Covenant" it is based on the Jewish law
+            <p>We have chosen to sign something different.  Called a <em>B’rit Ahuvim</em> or "Lovers’ Covenant", it is based on the Jewish law
             of bilateral partnerships, where two equals enter into an agreement for their mutual benefit.
             The <em>B’rit Ahuvim</em> outlines our obligations to one another and our family.</p>
 
@@ -55,7 +55,7 @@
             <h3>Breaking the Glass</h3>
 
             <p>At the end of the ceremony, Gabe will step on a glass wrapped in cloth.
-            This is a nonreligous but very old custom, with many interpretations:</p>
+            This is a nonreligious but very old custom, with many interpretations:</p>
             <ul>
                 <li>A reminder of the destruction of the first Temple in Jerusalem</li>
                 <li>A statement that the world is in excile, broken, and requiring our care.</li>
@@ -78,10 +78,15 @@
             symbolic consummation, a statement of the couple's dedication to each other and their right to privacy. </p>
 
             <p>It is also a chance for us to exhale, gather our thoughts, and share a bite to eat.</p>
+
+
+            <div>
+                <img class="pure-img flip-horiz" src="https://kin.house/rose.svg" alt="rose" />
+            </div>
         </div>
     </div>
 
 </div>
 
 <p><small>Some of the language on this page comes from our friends Tobin Belzer and Jesse Ruskin.
-    Some other bits come from the book <a href="http://www.amazon.com/dp/0743202554"><em>The New Jewish Wedding</em> by Anita Diamanti</a>. </small></p>
+    Some other bits come from the book <a href="http://www.amazon.com/dp/0743202554"><em>The New Jewish Wedding</em> by Anita Diamant</a>. </small></p>
