--- a/assets/traditions.html
+++ b/assets/traditions.html
@@ -58,7 +58,7 @@
             This is a nonreligious but very old custom, with many interpretations:</p>
             <ul>
                 <li>A reminder of the destruction of the first Temple in Jerusalem</li>
-                <li>A statement that the world is in excile, broken, and requiring our care.</li>
+                <li>A statement that the world is in exile, broken, and requiring our care.</li>
                 <li>An excuse "for levity to break out"</li>
                 <li>A way to sober up a raucous party</li>
                 <li>An ancient method for frightening and appeasing demons, who were believed to be attracted to the fortunate</li>
