Add info about friend gathering
[#96336536]

--- a/assets/event.html
+++ b/assets/event.html
@@ -48,8 +48,9 @@
             <p>Gabe's parents, Pam &amp; Dan, are hosting an informal gathering at their home on Saturday, June 27 for our families.
               Separate invitations have gone out via email.</p>
             <h2>For friends</h2>
-            <p>In lieu of bachelor &amp; bachelorette parties, we're inviting our friends to join us for beers on the evening of Friday, June 26.
-              Details to follow.</p>
+            <p>In lieu of bachelor &amp; bachelorette parties, we're inviting our friends to join us
+            for drinks at the <a href="http://pdxgreendragon.com/">Green Dragon Bistro &amp; Pub</a>
+            on Friday, June 26 at 8pm.</p>
         </div>
     </div>
 </div>
