update homepage, no more updates coming

--- a/assets/home.html
+++ b/assets/home.html
@@ -27,8 +27,8 @@
         </div>
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="left-bordered padded leftjust">
-                <p>Look around this website for information. We’ll be adding info over the coming weeks; check back occasionally.</p>
-                <p>In the meantime, write us if you have any questions: <a href="mailto:us@kin.house">us@kin.house</a></p>
+                <p>Look around this website for information. </p>
+                <p>Feel free to write us if you have any questions: <a href="mailto:us@kin.house">us@kin.house</a></p>
             </div>
         </div>
     </div>
