Adds seven blessings

--- a/assets/traditions.html
+++ b/assets/traditions.html
@@ -24,6 +24,8 @@
 
             <p>The blessings are adapted from ancient rabbinic teachings, beginning with the blessing over the wine and ending with
             a communal expression of joy.</p>
+
+            <p>We will be using <a href="/blessings">modern English translations.</a></p>
         </div>
 
     </div>
