--- a/assets/template.html
+++ b/assets/template.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-		<title>Alana &amp; Gabe{{if ne .Title "Home"}}: {{.Title}}{{end}}</title>
+		<title>Alana &amp; Gabe{{if not (eq .Title "Home" "")}}: {{.Title}}{{end}}</title>
         <link rel="stylesheet" href="/pure-min.css">
         <link rel="stylesheet" href="/grids-responsive-min.css">
 		<link rel="stylesheet" type="text/css" href="/main.css">
