remove extraneous periods

--- a/assets/traditions.html
+++ b/assets/traditions.html
@@ -60,11 +60,11 @@
             This is a nonreligious but very old custom, with many interpretations:</p>
             <ul>
                 <li>A reminder of the destruction of the first Temple in Jerusalem</li>
-                <li>A statement that the world is in exile, broken, and requiring our care.</li>
+                <li>A statement that the world is in exile, broken, and requiring our care</li>
                 <li>An excuse "for levity to break out"</li>
                 <li>A way to sober up a raucous party</li>
                 <li>An ancient method for frightening and appeasing demons, who were believed to be attracted to the fortunate</li>
-                <li>A reminder of the fragility of relationships, which must be treated with care, love and respect.</li>
+                <li>A reminder of the fragility of relationships, which must be treated with care, love and respect</li>
                 <li>A sexual metaphor</li>
                 <li>A signal that the ceremony is over</li>
             </ul>
