--- a/assets/home.html
+++ b/assets/home.html
@@ -19,16 +19,12 @@
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="padded rightjust">
-                <p>We're excited to get married
-                    <br />and hope you can join us!</p>
-                <p><b>5pm</b> on June 28, 2015
-                    <br />Portland, Oregon</p>
+                <p>Thanks for all the love!</p>
             </div>
         </div>
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="left-bordered padded leftjust">
-                <p>Look around this website for information. </p>
-                <p>Feel free to write us if you have any questions: <a href="mailto:us@kin.house">us@kin.house</a></p>
+                <p><a href="mailto:us@kin.house">us@kin.house</a></p>
             </div>
         </div>
     </div>
